<resources>
    <string name="app_name">71190458_final</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signin">Login</string>
    <string name="signinwith">Or login with</string>
    <string name="signup">Sign Up</string>
    <string name="signupnow">Sign Up Now</string>
    <string name="Register">Register</string>
    <string name="google">Google</string>
    <string name="update">Update</string>
    <string name="save">Save</string>
    <string name="create">Create Data</string>
    <string name="edit">Edit Data</string>
    <string name="forgetPassword">Forget your password?</string>
    <string name="donthaveanAccount">Don\'t have an account?</string>
    <string name="alreadyhaveanAccount">Already have an account?</string>
</resources>