<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin"
            android:textColor="@color/colorBlue"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_margin="0dp"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/username"
                />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="20dp"
                android:paddingLeft="10dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/password"
                />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="20dp"
                android:hint="@string/password"
                android:paddingLeft="10dp"
                android:inputType="textPassword" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgetPassword"
            android:layout_gravity="start"
            android:layout_marginLeft="200dp"
            android:layout_marginBottom="20dp"/>

         <Button
             android:id="@+id/btnLogin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/signin"
             android:textColor="@color/colorWhite"
             android:background="@drawable/background_button"
             android:theme="@style/Button.color"
             android:layout_marginBottom="10dp"
             />

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/signinwith"-->
<!--            android:layout_margin="20dp"/>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <Button
                android:id="@+id/btnLoginGoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signinwith"
                android:textColor="@color/black"
                android:drawableRight="@drawable/google"
                android:backgroundTint="@color/colorWhite"
                />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="24dp"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:paddingRight="6dp"
            android:text="@string/donthaveanAccount"
            />

        <TextView
            android:id="@+id/tv_to_Register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:text="@string/signupnow"
            android:textColor="@color/colorBlue"/>

    </LinearLayout>

</LinearLayout>